--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "main": "index.ts",
   "scripts": {
@@ -19,7 +19,7 @@
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
     "@expo/metro-config": "^0.18.11",
-    "@shopify/flash-list": "^1.7.1",
+    "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.59.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.27",
@@ -35,19 +35,19 @@
     "react": "^18.2.0",
     "react-native": "^0.74.5",
     "react-native-css-interop": "^0.1.9",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-reanimated": "^3.15.4",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "tailwind-merge": "^2.5.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-updates": "~0.25.26"
   },
   "devDependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
     "@types/node": "^22.7.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "~18.2.79",
+    "@types/react-dom": "~18.2.25",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8.57.1",
@@ -58,7 +58,7 @@
     "expo-system-ui": "^3.0.7",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2",
+    "typescript": "~5.3.3",
     "typescript-eslint": "^8.8.1"
   }
 }
