--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "ios": "expo run:ios",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
     "@expo/metro-config": "^0.18.11",
     "@shopify/flash-list": "1.6.4",
+    "@t3-oss/env-core": "^0.8.0",
     "@tanstack/react-query": "^5.59.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.27",
@@ -30,6 +31,7 @@
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.26",
     "expo-web-browser": "^13.0.3",
     "nativewind": "^4.1.10",
     "react": "^18.2.0",
@@ -40,11 +42,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "tailwind-merge": "^2.5.3",
-    "zod": "^3.23.8",
-    "expo-updates": "~0.25.26"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
     "@types/node": "^22.7.4",
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
